# taskana-api

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
taskana_api/: app.py  config.py
taskana_api/database/: connection.py  models.py  provider.py
taskana_api/database/migrations/: env.py
taskana_api/database/migrations/versions/: 7957fbd0e383_init.py
taskana_api/entities/: tasks.py  users.py
taskana_api/routes/: actions.py  api.py  tasks.py
